--- a/index.css
+++ b/index.css
@@ -11,6 +11,13 @@
   justify-content: center;
 }
 
+.error {
+  color: red;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 20px
+}
+
 .url-form {
   height: 25px;
   font-size: 15px;
